--- a/css/styles.css
+++ b/css/styles.css
@@ -2,7 +2,7 @@
     background-color: #ff4c68;
 }
 
-h1 {
+.heading {
     font-family: 'Montserrat', sans-serif;
     font-size: 3rem;
     line-height: 1.5;
