--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,153 @@
+body {
+    font-family: 'Montserrat', sans-serif;
+}
+
 #title {
     background-color: #ff4c68;
+    color: #fff;
 }
 
 .heading {
     font-family: 'Montserrat', sans-serif;
-    font-size: 3rem;
+    font-size: 3.5rem;
     line-height: 1.5;
 }
 
+h2 {
+    font-family: 'Montserrat', sans-serif;
+    font-size: 3rem !important;
+    line-height: 1.5 !important;
+}
+
+h3 {
+    font-family: "Montserrat" !important;
+}
+
+p {
+    color: #8f8f8f;
+}
+
 .container-xxl {
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
+}
+
+.navbar-brand {
+    font-family: 'Ubuntu', sans-serif;
+    font-size: 2.5rem !important;
+    font-weight: bold;
+}
+
+.navbar {
+    padding: 0 0 4.5rem !important;
+}
+
+.nav-item {
+    padding: 0 18px;
+}
+
+.nav-link {
+    font-size: 1.2rem;
+    font-family: "Montserrat-Light";
+}
+
+.download-button {
+    margin: 5% 3% 5% 0%;
+}
+
+.title-image {
+    width: 20%;
+    transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
+}
+
+#features {
+    padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
+}
+
+.feature-box {
+    text-align: center;
+    padding: 4.5%;
+}
+
+.icon {
+    color: #ef8172;
+    margin: 1.2rem;
+}
+
+.icon:hover {
+    color: #ff4c68;
+}
+
+#testimonials {
+    padding: 7% 15%;
+    background-color: #ef8172;
+    text-align: center;
+    color: #fff;
+}
+
+.testimonial-image {
+    width: 10%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+.carousel-item {
+    padding: 10% 15%;
+}
+
+#press {
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo {
+    width: 15%;
+    margin: 20px 20px 50px;
+}
+
+#pricing {
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column {
+    padding: 3% 2%;
+}
+
+@media (max-width:1028px) {
+    .title-image {
+        position: static;
+        width: 40%;
+        transform: rotate(0);
+    }
+    #title {
+        text-align: center;
+    }
+}
+
+#cta {
+    background-color: #ff4c68;
+    color: #fff;
+    font-family: 'Montserrat', sans-serif;
+    text-align: center;
+    padding: 5% 10% 2%;
+}
+
+h3 {
+    font-size: 3.5rem;
+}
+
+#footer {
+    background-color: #fff;
+    padding: 1% 5% 1%;
+    text-align: center;
+}
+
+i {
+    margin-right: 5px;
 }
